# DDOBAK-Backend-AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  lambda_config.yaml  pyproject.toml  requirements.txt
lambdas/analysis_result_loader/: Dockerfile  __init__.py  handler.py
lambdas/bedrock_lambda/: Dockerfile  __init__.py  handler.py  prompt-ko.txt  prompt.txt
lambdas/ocr_lambda/: handler.py
lambdas/test_bedrock/: Dockerfile  handler.py
lambdas/test_lambda/: Dockerfile  handler.py
lambdas/test_ocr/: Dockerfile  handler.py
scripts/: build.sh  generate-lambda-config.py  manager.sh  test-local.sh
terraform/: .gitignore  README.md  iam.tf  lambdas.tf  main.tf  outputs.tf  sqs.tf  terraform.tfvars.example  variables.tf  wiring.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
