[project]
name = "ddobak-backend-ai"
version = "0.1.0"
description = "DDOBAK AI Lambda functions for OCR and LLM services on AWS"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.1.1",
    "json-repair>=0.47.4",
]

[tool.setuptools.packages.find]
include = ["lambdas*"]
exclude = ["terraform*", "tests*", "scripts*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
